--- a/config.yaml
+++ b/config.yaml
@@ -16,8 +16,8 @@ author:
         href: styles/
         target: _self
         text: All the link styles
-    - github: https://github.com/jpanther/lynx
-    - twitter: https://twitter.com/jpanther
+    - github: https://github.com/lauradefrutos
+    - twitter: https://twitter.com/laura3141592
     - font-awesome:
         href: https://fontawesome.com/
         text: FontAwesome
