--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ disableKinds:
   - term
 author:
   headline: A PhD researcher in cognitive neuroscience at the BCBL (Spain).
-  image: author.jpg
+  image: foto_carnet_2020.jpg
   links:
     - link:
         href: https://github.com/jpanther/lynx/blob/stable/README.md
