--- a/config.yaml
+++ b/config.yaml
@@ -8,10 +8,7 @@ author:
   headline: A PhD researcher in cognitive neuroscience at the BCBL (Spain).
   image: foto_carnet_2020.jpg
   links:
-    - link:
-        href: https://github.com/jpanther/lynx/blob/stable/README.md
-        icon: christmass-hat-svgrepo-com
-        text: My CV
+    - cv = { href = "https://fontawesome.com", text = "My CV" }
     - link:
         href: styles/
         icon: christmas-socks-svgrepo-com
