--- a/config.yaml
+++ b/config.yaml
@@ -26,10 +26,7 @@ author:
         href: https://twitter.com/laura3141592
         icon: twitter
         text: Twitter
-    - link:
-        href: https://orcid.org/0000-0003-0027-3116
-        icon: christmass-tree-svgrepo-com
-        text: ORCID
+    - orcid = { href = "https://orcid.org/0000-0003-0027-3116", text = "ORCID" }
   name: Hi! My name is Laura de Frutos-Sagastuy.
 markup:
   goldmark:
