--- a/config.yaml
+++ b/config.yaml
@@ -22,10 +22,7 @@ author:
         href: https://github.com/lauradefrutos
         icon: github
         text: Github
-    - link: 
-        href: https://twitter.com/laura3141592
-        icon: twitter
-        text: Twitter
+    - twitter = { href = "https://twitter.com/laura3141592", text = "Twitter" } 
     - orcid = { href = "https://orcid.org/0000-0003-0027-3116", text = "ORCID" }
   name: Hi! My name is Laura de Frutos-Sagastuy.
 markup:
