--- a/config.yaml
+++ b/config.yaml
@@ -22,12 +22,15 @@ author:
         href: 
         icon:
         text: About me
-    - link:
-        github = { href = "https://github.com/lauradefrutos", text = "Github" } 
-    - link:
-        twitter = { href = "https://twitter.com/laura3141592", text = "Twitter" } 
-    - link:
-        orcid = { href = "https://orcid.org/0000-0003-0027-3116", text = "ORCID" }
+    - github:
+        href = "https://github.com/lauradefrutos"
+        text = "Github" 
+    - twitter:
+        href = "https://twitter.com/laura3141592"
+        text = "Twitter" 
+    - orcid:
+        href = "https://orcid.org/0000-0003-0027-3116"
+        text = "ORCID" 
   name: Hi! My name is Laura de Frutos-Sagastuy.
 markup:
   goldmark:
