--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,10 @@ author:
         text = "Github" 
     - twitter:
         href = https://twitter.com/laura3141592
-        text = "Twitter" 
+        text = "Personal Twitter" 
+    - twitter:
+        href = https://twitter.com/NeuroLang_BCBL
+        text: "Neurobiology of Language Twitter"
     - orcid:
         href = https://orcid.org/0000-0003-0027-3116
         text = "ORCID" 
