--- a/config.yaml
+++ b/config.yaml
@@ -25,12 +25,9 @@ author:
     - github:
         href = https://github.com/lauradefrutos
         text = "Github" 
-    - twitter1:
+    - twitter:
         href = https://twitter.com/laura3141592
         text = "Personal Twitter" 
-    - twitter2:
-        href = https://twitter.com/NeuroLang_BCBL
-        text: "Neurobiology of Language Twitter"
     - orcid:
         href = https://orcid.org/0000-0003-0027-3116
         text = "ORCID" 
