--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ author:
         text = "Github" 
     - twitter:
         href = https://twitter.com/laura3141592
-        text = "Personal Twitter" 
+        text = "Twitter" 
     - orcid:
         href = https://orcid.org/0000-0003-0027-3116
         text = "ORCID" 
