--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ author:
         target: _self
         text: Projects I'm working on
     - link:
-        href: 2022-12-04-about-me
+        href: https://github.com/lauradefrutos/webpage/blob/main/content/post/2022-12-04-about-me/index.Rmd
         icon: christmas-socks-svgrepo-com
         text: About me
     - github:
