--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,10 @@ author:
         text: Github 
     - twitter:
         href: https://twitter.com/laura3141592
-        text: Twitter
+        text: Personal Twitter
+    - twitter:
+        href: https://twitter.com/NeuroLang_BCBL
+        text: Neurobiology of language RG Twitter    
     - orcid:
         href: https://orcid.org/0000-0003-0027-3116
         text: ORCID
