--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ disableKinds:
   - taxonomy
   - term
 author:
-  headline: A PhD researcher in cognitive neuroscience at the BCBL (Spain).
+  headline: 
   image: foto_carnet_2020.jpg
   links:
     - link:
